2007-09-12  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #231178

	* filter-label.c: (xml_create):
	Removes underscores from titles.

2007-09-03  Srinivasa Ragavan  <sragavan@novell.com>

	** Fix for bug #471791 (Move away from asserts to g_ret*)

	* filter-option.c: (filter_option_set_current),
	(filter_option_add):
	* filter-rule.c: (filter_rule_clone), (filter_rule_set_name),
	(filter_rule_set_source), (filter_rule_validate), (filter_rule_eq),
	(filter_rule_xml_encode), (filter_rule_xml_decode),
	(filter_rule_copy), (filter_rule_add_part),
	(filter_rule_remove_part), (filter_rule_replace_part),
	(filter_rule_build_code), (filter_rule_emit_changed):
	* rule-context.c: (rule_context_add_part_set),
	(rule_context_add_rule_set), (rule_context_set_error),
	(rule_context_load), (rule_context_save), (rule_context_revert),
	(rule_context_find_part), (rule_context_create_part),
	(rule_context_next_part), (rule_context_next_rule),
	(rule_context_find_rule), (rule_context_add_part),
	(rule_context_add_rule), (rule_context_add_rule_gui),
	(rule_context_remove_rule), (rule_context_rank_rule),
	(rule_context_get_rank_rule), (rule_context_find_rank_rule):
	* rule-editor.c: (rule_move), (cursor_changed):

2007-08-13  Ross Burton  <ross@openedhand.com>

	* rule-context.c:
	Remove unused include.

2007-07-30  Andre Klapper  <a9016009@gmx.de>

	* filter.glade:
	remove "window1" string from translation

2007-07-27  Johnny Jacob  <jjohnny@novell.com>

	** Fix for bug #457523.
	
	* filter-int.c: (format_sexp): use (- n) for negative values.
	
2007-06-15  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #263207

	* filter-rule.c: (validate): No part is not valid.
	* filter-rule.c: (less_parts): Can remove all parts.
	* rule-editor.c: (dialog_rule_changed): New callback
	for disabling OK button in dialog when rule isn't valid.
	* rule-editor.c: (rule_add), (rule_edit):
	Connecting dialog_rule_changed on "changed" signal of
	actual rule.
